--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
     </form>
 </section>
 <section>
-  <h2>My Bookmarks:</h2>
+  <h2>My Bookmarks</h2>
   <ul class="js-bookmark-list">
     <!--Bookmark list will render here-->
   </ul>
 </section>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="scripts/api.js"></script>
+  <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
