Update README for clarity on form rendering, tweak index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Bookmarker</h1>
   <section>
     <h2>Add A Bookmark</h2>
+    <!--Form needs to be moved into index.js, painted on via render when adding: true in store-->
     <form id="bookmark">
       <label for="title">Title: </label>
       <input type="text" name="title" id="title" placeholder="My Awesome Site" required />
@@ -18,12 +19,28 @@
       <label for="desc">Description: </label>
       <input type="text" name="desc" id="desc" placeholder="Enter a summary for your bookmark"/>
       <label for="rating">My Rating (1 - 5): </label>
-      <input type="number" name="rating" id="rating" min="1" max="5"/>
+      <select name="rating" id="rating" min="1" max="5">
+        <option value="5">5</option>
+        <option value="4">4</option>
+        <option value="3">3</option>
+        <option value="2">2</option>
+        <option value="1">1</option>
+      </select>
       <button type="submit">Add</button>
     </form>
+    <!-- ^^^ Move me ^^^ -->
 </section>
 <section>
   <h2>My Bookmarks</h2>
+  <button type="submit" id="display-form">Add New Bookmark</button>
+  <label for="rating-filter">Filter By Minimum Rating: </label>
+  <select name="rating-filter" id="rating-filter" min="1" max="5">
+    <option value="5">5</option>
+    <option value="4">4 or higher</option>
+    <option value="3" selected>3 or higher</option>
+    <option value="2">2 or higher</option>
+    <option value="1">1 or higher</option>
+  </select>
   <ul class="js-bookmark-list">
     <!--Bookmark list will render here-->
   </ul>
