--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <section>
     <h2>Add A Bookmark</h2>
     <!--Form needs to be moved into index.js, painted on via render when adding: true in store-->
+    <!--Use FormData() function native to JS for handling forms-->
     <form id="bookmark">
       <label for="title">Title: </label>
       <input type="text" name="title" id="title" placeholder="My Awesome Site" required />
