get form for adding a bookmark to render based on store

--- a/index.html
+++ b/index.html
@@ -9,28 +9,8 @@
 <body>
   <h1>Bookmarker</h1>
   <section>
-    <h2>Add A Bookmark</h2>
-    <!--Form needs to be moved into index.js, painted on via render when adding: true in store-->
-    <!--Use FormData() function native to JS for handling forms-->
-    <form id="bookmark">
-      <label for="title">Title: </label>
-      <input type="text" name="title" id="title" placeholder="My Awesome Site" required />
-      <label for="url">Bookmark URL: </label>
-      <input type="url" name="url" id="url" placeholder="http://site.com" required />
-      <label for="desc">Description: </label>
-      <input type="text" name="desc" id="desc" placeholder="Enter a summary for your bookmark"/>
-      <label for="rating">My Rating (1 - 5): </label>
-      <select name="rating" id="rating" min="1" max="5">
-        <option value="5">5</option>
-        <option value="4">4</option>
-        <option value="3">3</option>
-        <option value="2">2</option>
-        <option value="1">1</option>
-      </select>
-      <button type="submit">Add</button>
-    </form>
-    <!-- ^^^ Move me ^^^ -->
-</section>
+    
+  </section>
 <section>
   <h2>My Bookmarks</h2>
   <button type="submit" id="display-form">Add New Bookmark</button>
@@ -52,6 +32,7 @@
   <script type="text/javascript" src="scripts/store.js"></script>
   <script type="text/javascript" src="scripts/bookmarkItem.js"></script>
   <script type="text/javascript" src="scripts/bookmarkList.js"></script>
+  <script type="text/javascript" src="scripts/bookmarkForm.js"></script>
   <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
