--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
   <script type="text/javascript" src="scripts/store.js"></script>
-  <script type="text/javascript" src="scripts/bookmarkItem.js"></script>
-  <script type="text/javascript" src="scripts/bookmarkList.js"></script>
-  <script type="text/javascript" src="scripts/bookmarkForm.js"></script>
+  <script type="text/javascript" src="scripts/bookmark-item.js"></script>
+  <script type="text/javascript" src="scripts/bookmark-list.js"></script>
+  <script type="text/javascript" src="scripts/bookmark-form.js"></script>
   <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
