--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
   <h2>My Bookmarks</h2>
   <button type="submit" id="display-form">Add New Bookmark</button>
   <label for="rating-filter">Filter By Minimum Rating: </label>
-  <select name="rating-filter" id="rating-filter" min="1" max="5">
+  <select name="rating-filter" id="rating-filter">
+    <option value="" selected>all</option>
     <option value="5">5</option>
     <option value="4">4 or higher</option>
-    <option value="3" selected>3 or higher</option>
+    <option value="3">3 or higher</option>
     <option value="2">2 or higher</option>
     <option value="1">1 or higher</option>
   </select>
