add and import style links into index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bookmarker</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Bookmarker</h1>
@@ -14,7 +16,7 @@
 <section>
   <h2>My Bookmarks</h2>
   <button type="submit" id="display-form">Add New Bookmark</button>
-  <label for="rating-filter">Filter By Minimum Rating: </label>
+  <label for="rating-filter">Minimum Rating: </label>
   <select name="rating-filter" id="rating-filter">
     <option value="" selected>all</option>
     <option value="5">5</option>
