--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bookmarker</h1>
   <section>
-    
+  <h1>Bookmarker</h1>
+    <div class="bookmark-list-tools">
+      <label for="rating-filter">Minimum Rating: </label>
+      <select name="rating-filter" id="rating-filter">
+        <option value="" selected>All</option>
+        <option value="5">5</option>
+        <option value="4">4 or higher</option>
+        <option value="3">3 or higher</option>
+        <option value="2">2 or higher</option>
+        <option value="1">1 or higher</option>
+      </select>
+    </div>
+    <ul class="js-bookmark-list">
+      <!--Bookmark list will render here-->
+    </ul>
+    <button type="submit" id="display-form">Add New Bookmark</button>
   </section>
-<section>
-  <label for="rating-filter">Minimum Rating: </label>
-  <select name="rating-filter" id="rating-filter">
-    <option value="" selected>all</option>
-    <option value="5">5</option>
-    <option value="4">4 or higher</option>
-    <option value="3">3 or higher</option>
-    <option value="2">2 or higher</option>
-    <option value="1">1 or higher</option>
-  </select>
-  <button type="submit" id="display-form">Add New Bookmark</button>
-  <ul class="js-bookmark-list">
-    <!--Bookmark list will render here-->
-  </ul>
-</section>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="scripts/api.js"></script>
