mobile styles milestone

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <label for="rating-filter">Minimum Rating: </label>
       <select name="rating-filter" id="rating-filter">
         <option value="" selected>All</option>
-        <option value="5">5</option>
-        <option value="4">4 or higher</option>
-        <option value="3">3 or higher</option>
-        <option value="2">2 or higher</option>
-        <option value="1">1 or higher</option>
+        <option value="5">&#x2605&#x2605&#x2605&#x2605&#x2605</option>
+        <option value="4">&#x2605&#x2605&#x2605&#x2605&#9734;</option>
+        <option value="3">&#x2605&#x2605&#x2605&#9734;&#9734;</option>
+        <option value="2">&#x2605&#x2605&#9734;&#9734;&#9734;</option>
+        <option value="1">&#x2605&#9734;&#9734;&#9734;&#9734;</option>
       </select>
     </div>
     <ul class="js-bookmark-list">
