--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <ul class="js-bookmark-list">
       <!--Bookmark list will render here-->
     </ul>
-    <button type="submit" id="display-form">Add New Bookmark</button>
+    <button type="submit" id="display-form" class="display-form">Add New Bookmark</button>
   </section>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/cuid/1.3.8/browser-cuid.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
